--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -9734,19 +9734,29 @@ body.touch {
   height: 90px;
   border-radius: 6px;
   position: relative;
-  margin-right: 20px;
+  margin: 10px;
+
+  .delete-cross {
+    position: absolute;
+    top: 6px;
+    right: 6px;
+    line-height: 0;
+  }
 }
 .add-photo {
   border: 1px solid rgba(0, 0, 0, 0.5);
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
 }
 .card-photo {
-  background: #115c91;
+  //background: #115c91;
+  background-size: cover;
 }
 .beach-event__leave-review__modal__photos {
   margin-top: 20px;
   display: flex;
+  flex-wrap: wrap;
+  margin-left: -10px;
+  margin-right: -10px;
 }
