--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -9725,3 +9725,29 @@ body.touch {
   left: 10px;
   top: 14px;
 }
+.search-card-list {
+  width: 100%;
+  background: #fff;
+  border-radius: 12px;
+  height: 315px;
+  border: 1px solid;
+  margin-bottom: 24px;
+  display: flex;
+  align-items: stretch;
+
+  .img_area {
+    max-width: 523px;
+    width: 100%;
+    flex-shrink: 0;
+    overflow: hidden;
+
+    img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  .info_area {
+    padding: 24px 26px 31px 26px;
+  }
+}
