--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -9965,3 +9965,10 @@ body.touch {
   margin-left: -10px;
   margin-right: -10px;
 }
+
+.line-variant span {
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 170%;
+  color: #73767D;
+}
