--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -9994,3 +9994,12 @@ body.touch {
   line-height: 170%;
   color: #73767D;
 }
+.zoom-img {
+  position: absolute;
+  left: 50%;
+  margin-left: -30px;
+  top: 50%;
+  margin-top: -30px;
+  cursor: pointer;
+  z-index: 12;
+}
