--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -9994,3 +9994,21 @@ body.touch {
   line-height: 170%;
   color: #73767D;
 }
+.review-photo-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+
+  .review-photo {
+    height: 200px;
+    overflow: hidden;
+    border-radius: 12px;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
