--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -9999,16 +9999,80 @@ body.touch {
   align-items: center;
   justify-content: space-between;
   flex-wrap: nowrap;
+  margin-bottom: 27px;
 
   .review-photo {
     height: 200px;
     overflow: hidden;
     border-radius: 12px;
+    flex: 1;
+    margin: 0 1px;
+    position: relative;
+    cursor: pointer;
+
+    .all-photos {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      background: rgba(34, 133, 150, 0.6);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 24px;
+      color: #fff;
+    }
 
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+    }
+  }
+}
+.with-photos {
+  top: 244px;
+}
+@media (min-width: 768px) and (max-width: 1439px) {
+  .with-photos {
+    top: 214px;
+  }
+  .review-photo-container {
+    margin-bottom: 16px;
+
+    .review-photo {
+      height: 180px;
+    }
+  }
+}
+@media  (max-width: 767px) {
+  .with-photos {
+    top: 230px;
+  }
+  .review-photo-container {
+    margin-bottom: 30px;
+
+    .review-photo {
+      height: 174px;
+    }
+  }
+}
+@media  (max-width: 400px) {
+  .with-photos {
+    top: 264px;
+  }
+  .review-photo-wrap {
+    margin-bottom: 50px;
+  }
+  .review-photo-container {
+    margin-bottom: 0;
+
+    .review-photo {
+      height: 174px;
     }
   }
 }
