--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -9995,6 +9995,9 @@ body.touch {
   color: #73767D;
 }
 .zoom-img {
+  opacity: 0;
+  visibility: hidden;
+  transition: all .3s ease-in-out;
   position: absolute;
   left: 50%;
   margin-left: -30px;
@@ -10002,4 +10005,24 @@ body.touch {
   margin-top: -30px;
   cursor: pointer;
   z-index: 12;
+}
+.swiper-wrapper:hover {
+  .zoom-img {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+.zoom-modal-inner {
+  max-width: 1133px;
+  width: 100%;
+  height: 80%;
+  @media (max-width: 1024px) {
+    height: 65%;
+  }
+  .zoomer img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 12px;
+  }
 }
