--- a/assets/scss/modals/mobileSettingsModal.scss
+++ b/assets/scss/modals/mobileSettingsModal.scss
@@ -4,37 +4,44 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: #fff;
   z-index: 9999;
   padding: 20px;
   overflow: auto;
+  background-color: #ffffff;
 
-  .app-view {
-    background-color: #fafafa;
-    width: 200px;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    margin: 20px auto;
-    border-radius: 100%;
+  &.banner-mobile-1 {
+    top: unset;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: transparent;
+    padding: 20px 20px 0;
+
+   .content {
+      padding: 10px 0;
+    }
+
+    .text {
+      font-weight: 600;
+      font-size: 12px;
+      line-height: 16px;
+      text-align: center;
+      margin-bottom: 10px;
+    }
   }
 
-  .big-txt {
-    text-align: center;
-    font-size: 22px;
-    font-weight: bold;
-    color: #000;
-    width: 75%;
-    margin: 0 auto;
-  }
+  &.banner-mobile-2, &.banner-mobile-3 {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: bottom;
+    background-clip: border-box;
 
-  .small-txt {
-    width: 75%;
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  .mobile-link {
-    margin: 0 5px;
+    .text {
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 22px;
+      text-align: center;
+      margin-bottom: 30px;
+      margin-top: 20px;
+    }
   }
 }
