--- a/assets/scss/yandexMap/yandex.scss
+++ b/assets/scss/yandexMap/yandex.scss
@@ -8,7 +8,7 @@
     font-size: 16px;
     line-height: 120%;
     color: #393E48;
-    width: max-content;
+    width: auto;
   }
 
   .description {
@@ -21,9 +21,13 @@
 }
 
 .my-balloon {
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
   padding: 10px;
+
+  .header {
+    position: relative !important;
+  }
 }
 
 .my-hint {
