--- a/assets/scss/yandexMap/yandex.scss
+++ b/assets/scss/yandexMap/yandex.scss
@@ -51,6 +51,19 @@
     box-shadow: 2px 3px 8px #A3BBC7;
     border-radius: 4px;
     border: none;
+
+    &:before {
+      content: '';
+      display: block;
+      width: 0;
+      height: 0;
+      position: absolute;
+      border-left: 2px solid transparent;
+      border-right: 2px solid transparent;
+      border-bottom: 8px solid #ffffff;
+      left: calc(50% - 8px);
+      top: -8px;
+    }
   }
 }
 
