#533 [fix]: mobileSettingsModal: change logo and button size

--- a/assets/scss/modals/mobileSettingsModal.scss
+++ b/assets/scss/modals/mobileSettingsModal.scss
@@ -44,4 +44,14 @@
       margin-top: 20px;
     }
   }
+
+  .logo-block {
+    width: 28.571%;
+    margin: 0 auto;
+  }
+
+  .link-block {
+    width: 36.8vh;
+    margin: 0 auto;
+  }
 }
