#549 [fix]: assets: change photo size

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -10011,7 +10011,7 @@ body.touch {
 }
 .card-photo {
   //background: #115c91;
-  background-size: cover;
+  background-size: 100% 100%;
 }
 .beach-event__leave-review__modal__photos {
   margin-top: 20px;
