--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -6904,7 +6904,7 @@ input {
         left: 0;
         width: 100%;
         height: 100%;
-        overflow-x: scroll;
+        overflow-x: hidden;
         overflow-y: hidden;
         display: flex;
         z-index: 105;
@@ -6924,6 +6924,13 @@ input {
             &__inner {
               position: relative;
               @include flex-center;
+              align-items: normal;
+              justify-content: normal;
+              width: 100%;
+
+              .line-chart {
+                overflow-x: scroll;
+              }
             }
           }
         }
@@ -6931,6 +6938,9 @@ input {
         .two-part-layout__card {
           position: relative;
           z-index: 2;
+          top:10%;
+          margin: 0 auto;
+          overflow-y: scroll;
         }
       }
 
@@ -6976,7 +6986,8 @@ input {
         // transition: height .5s ease;
 
         &.active {
-          height: 257px;
+          height: 110vh;
+          min-width: unset;
         }
       }
     }
@@ -8609,8 +8620,16 @@ input {
 
         &__temperature-text {
           span {
-            display: none;
+            /*display: none;*/
           }
+        }
+
+        &__info:nth-of-type(3) {
+          margin-top: 24px;
+        }
+
+        &__info:last-of-type {
+          margin-top: 24px;
         }
       }
     }
@@ -8842,6 +8861,28 @@ input {
       .slider-weather__month {
         font-size: 12px;
         line-height: 14px;
+      }
+    }
+
+    &__water-temp {
+      &.active {
+        .beach-page {
+          &__water-temp {
+            &__inner {
+              justify-content: normal;
+            }
+            &__info {
+              max-width: 270px;
+              flex-wrap: wrap;
+              padding-left: 14px;
+            }
+          }
+        }
+        .two-part-layout {
+          &__card {
+            width: 100%;
+          }
+        }
       }
     }
   }
