makes visible weather and map in mobile layout

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -7820,7 +7820,7 @@ input {
 
       &__tablet,
       &__desktop {
-        display: none !important;
+        //display: none !important;
       }
 
       &__mobile {
@@ -8918,7 +8918,7 @@ input {
       img {
         width: 23px;
         height: 22px;
-        margin-right: 9;
+        margin-right: 9px;
       }
 
       span {
