BEACH-396 hide buttons on mobile in map on beach page

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -10351,3 +10351,9 @@ body.touch {
     padding-top: 59px;
   }
 }
+
+@media (max-width: 425px) {
+  .beach-page .beach-event__map-weather .map__zoom-wrapper {
+    display: none;
+  }
+}
