--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -3440,6 +3440,7 @@ input {
       padding: 10px 0;
       display: flex;
       align-items: center;
+      min-height: 80px;
 
       img {
         margin-right: 10px;
@@ -5775,7 +5776,7 @@ input {
       }
 
       &__tablet {
-        display: flex;
+        display: block;
       }
 
       &__event-page {
@@ -7847,7 +7848,7 @@ input {
 
       &__tablet,
       &__desktop {
-        //display: none !important;
+        display: none !important;
       }
 
       &__mobile {
