fix beach block

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -369,7 +369,7 @@ input {
     margin-bottom: 15px;
 
     &:last-of-type {
-      margin-bottom: 0;
+      // margin-bottom: 0;
     }
 
     &__title {
